completed first exercise in dsp

--- a/exercises_dsp/Exercise_25_09_2025/dsp_e_25_09_2025.md
+++ b/exercises_dsp/Exercise_25_09_2025/dsp_e_25_09_2025.md
@@ -65,3 +65,106 @@ plt.show()
 
 ```
 
+## Task 2
+
+### 2.1
+![Square_triangle_product](square_triangle_productwave.png)
+
+$$
+E_x = \int_{-\infty}^{\infty}x(t) = \infty
+$$
+
+Given $x(t)$ one could express the wave as a symmetrical triangular wave subtracted with the sawtooth signal $x(t)$
+
+$$
+Q(t) = \Lambda\left(\frac{t}{1}\right)-x(-t)
+$$
+
+![alternative combination](alternative_combination.png)
+
+
+## Task 3
+
+### 3.1
+
+The fourier series of a square wave with return to 0 can be computed by:
+
+$$
+f(t) = \frac{a_0}{2}+ \sum_{n=1}^\infty (a_n \cos(\frac{n\pi t}{T_0}) + b_n \sin(\frac{n\pi t}{T_0}))
+$$
+
+Given that the square wave with return to zero is and even function, i.e. $f(t) = f(-t)$ the formula simplifies due to $b_n = 0, \forall~n$. 
+
+Furthermore $a_0$ (the DC component/average value of the function), and $a_n$ are given by:
+
+$$
+a_0 = \frac{2}{T_0}\int_{-T_0/2}^{T_0/2}f(t)~dt,~\land~ a_n = \frac{2}{T_0} \int_{-T_0/2}^{T_0/2}f(t)\cos(\frac{2\pi n t}{T_0})~dt
+$$
+
+With a square wave with a pulse duration $T$ and a period $T_0 > T$, $a_0$ can be computed (assuming that the amplitude is $1$ and that it is centered in $t=0$) by:
+
+$$
+\frac{a_0}{2} = \frac{T \cdot height}{T_0} = \frac{T}{T_0}
+$$
+
+Whereas the AC component(s) can be evaluated by:
+
+$$
+a_n = \frac{2}{T_0} \int_{-T/2}^{T/2}\cos(\frac{2\pi n}{T_0}t), \text{ since $f(t) \neq 0$ only for $t \in [-T/2,T/2]$} 
+$$
+
+$$
+a_n = \frac{2}{T_0}\left[\frac{T_0}{2\pi n}\sin(\frac{2\pi n}{T_0}t)\right]_{-T/2}^{T/2} = \frac{2}{T_0}\cdot\left(\frac{T_0}{2\pi n}\sin(\frac{\pi n T}{T_0})--\frac{T_0}{2\pi n}\sin(\frac{\pi n T}{T_0})\right)
+$$
+
+$$
+a_n = \frac{2}{T_0}\left(\frac{2T_0}{2\pi n}\sin(\frac{\pi n T}{T_0})\right) = \underline{\frac{2}{\pi n}\sin(\frac{\pi n T}{T_0})}
+$$
+
+Therefore leaving us with the fourier series defined by:
+
+$$
+f(t) = \frac{T}{T_0} + \sum_{n=1}^{\infty}\frac{2}{\pi n}\sin(\frac{\pi n T}{T_0})\cos(\frac{2\pi n }{T_0}t)
+$$
+
+With any arbitrary amplitude the function becomes:
+
+$$
+f(t) = \frac{AT}{T_0} + \sum_{n=1}^{\infty}\frac{2A}{\pi n}\sin(\frac{\pi n T}{T_0})\cos(\frac{2\pi n }{T_0}t)
+$$
+
+
+
+
+
+### 3.2
+For a sawtooth wave given by $f(t) = \frac{A}{T_0}t,~\land~ f(t + T_0) = f(t),~\forall ~t$ with period $T_0$ we have:
+
+$$
+a_0 = \frac{1}{T_0}\int_{0}^{T_0}f(t)~dt = \frac{1}{T_0}\int_{0}^{T_0}\frac{At}{T_0}~dt = \frac{1}{T_0}\left[\frac{At^2}{2T_0}\right]_{0}^{T_0} = \frac{A}{2} \to \underline{\frac{a_0}{2}= \frac{A}{4}}
+$$
+
+And for the cosine coefficients:
+
+$$
+a_n = \frac{2}{T}\int_{0}^{T_0}\frac{At}{T_0}\cos(\frac{2\pi n}{T_0}t)~dt = \frac{2A}{T_0^2}\int_0^{T_0}t\cos(\frac{2\pi n}{T_0}t)~dt 
+$$
+
+$$
+= \left[t\frac{T_0}{2\pi n}\sin(\frac{2\pi n}{T_0}t)\right]_{0}^{T_0}-(\frac{T_0}{2\pi n})^2\cos(\frac{2\pi n}{T_0}T_0) = \underline{0}
+$$
+
+And then finally for the sine coefficients the integration is almost the same (i.e. integration by parts) where the result comes out to:
+
+$$
+b_n = \frac{-A}{\pi n}
+$$
+
+The resulting fourier series then comes out to:
+
+$$
+f(t) = \frac{A}{4} -\frac{A}{\pi} \sum_{n=1}^{\infty}\frac{1}{n}\sin(\frac{2\pi n}{T_0}t)
+$$
+
+### 3.3
+![amplitudespectra](amplitudespectra.png)
