Finished task 2. We are officially cooked

--- a/exercises_dsp/Exercise_26_09_2025/dsp_e_26_09_2025.md
+++ b/exercises_dsp/Exercise_26_09_2025/dsp_e_26_09_2025.md
@@ -71,12 +71,48 @@ $$
 $$
 
 
+## Task 2
 
+### 2.1
 
+Given a the signal $x(t)$ shown in the figure below. 
+![alt text](e2.png)
 
+To calculate the amplitude and phase spectrum for the signal, one can view the signal as two time-shifted triangular signals given by:
 
+$$
+x(t) = A\Lambda(\frac{t-T}{\tau/2})-A\Lambda(\frac{t+T}{\tau/2})
+$$
 
+The fourier transform of a triangular signal is a well known one and yields (for a unit height triangle basewidth of $\tau$ centered in $t=0$):
 
+$$
+\mathcal{FT}(\Lambda(\frac{t}{\tau/2})) \to X(f) = \frac{\tau}{2}sinc^2(\frac{\pi f \tau}{2})
+$$
 
+So we then obtain:
 
+$$
+X_1(f) = A\frac{\tau}{2}sinc(\frac{\pi f \tau}{2}),~\land~ X_2(f) = -X_1(f) 
+$$
+
+Then shifting both of the signals in time by multiplying with $e^{-j\omega (\pm T)}$ with $X_1$ and $X_2$ respectively yields:
+
+$$
+X(f) = X_1(f)e^{-j\omega T} + X_2(f)e^{j\omega T} = A\frac{\tau}{2}sinc^2(\frac{\pi f \tau}{2})(e^{-j\omega T}-e^{j\omega T})
+$$
+
+$$\underline{
+X(f) = -jA\tau sinc^2(\frac{\pi f \tau}{2})sin(2\pi fT)
+}$$
+
+Which allows us to calculate the amplitude and phasespectrum by:
+
+$$
+|X(f)| = A\tau sinc^2(\frac{\pi f \tau}{2})sin(2\pi fT)
+$$
+
+$$
+\angle X(f) = \{\frac{\pi}{2}, -\frac{\pi}{2}, 0\} \\\text{ when $\sin(2\pi f T)$ varies between positive, negative and 0}
+$$
 
